# llmcourse-hw2-lstm

./: .gitignore  DESIGN.md  PRD.md  README.md  TASKS.md  pyproject.toml  run_experiment.py
data/: test_dataset.npz  train_dataset.npz
models/: best_model.pth  test_model.pth
notebooks/: lstm_frequency_extraction.ipynb
results/: metrics.json
src/: __init__.py  data_generator.py  evaluator.py  model.py  trainer.py  visualizer.py
tests/: test_data_generator.py  test_evaluator.py  test_model.py  test_trainer.py  test_visualizer.py
